stats in 1 batch

--- a/public/css/kitchensink.css
+++ b/public/css/kitchensink.css
@@ -18,13 +18,18 @@ html, body {
     font-size: 12px;
 }
 
+#deviationContainer {
+    font-size: 8px;
+    text-align: center;
+}
+
 #streamSet {
 	color: #FCEFA1;
     border: none;
 }
 
 #content {
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 #chart {
